--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,60 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="20" data-price="36.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KGznyO"><img src="https://m.media-amazon.com/images/I/71adg1YwuxL._SR400,400_.jpg" alt="OCANIA Wireless Earbuds Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KGznyO">OCANIA Wireless Earbuds Bluetooth Headphones True Wireless Earphones with Charging Case Bluetooth 5.0 Stereo Sound...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$36.79</span><span class="ori_price">$45.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">202CEP8P</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $45.99</strong> with promo code: <strong class="m_codes">202CEP8P</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KGznyO">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HgqauP"><img src="https://m.media-amazon.com/images/I/61WAdrnOZjL._SR400,400_.jpg" alt="Bluetooth Cap" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HgqauP">Bluetooth Cap, Wireless Bluetooth Speaker hat Bluetooth Beanie hat Wireless Baseball Cap Music Cap Wireless hat Headphones...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">40CGZDZW</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong class="m_codes">40CGZDZW</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 26, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HgqauP">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KFRPHE"><img src="https://m.media-amazon.com/images/I/71aK34UxDAL._SR400,400_.jpg" alt="FRACORA Unisex Low Top Fashion Canvas Sneakers" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KFRPHE">FRACORA Unisex Low Top Fashion Canvas Sneakers for Men and Women</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">40ZMNG2R</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong class="m_codes">40ZMNG2R</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KFRPHE">Use Code at Amazon</a></div>
+</div>
+  
 <div class="card clearfix" data-score="60" data-price="10.80">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2He5XWr"><img src="https://m.media-amazon.com/images/I/71G7DFqNX-L._SR400,400_.jpg" alt="" /></a>
