--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -5,7 +5,7 @@
   </ul>
 </div> -->
 
-<div class="sub_nav">
+<div class="sub_nav most_review_sub">
   <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
