--- a/app/views/deals/_navbar_most_categories.html.erb
+++ b/app/views/deals/_navbar_most_categories.html.erb
@@ -4,13 +4,18 @@
       <ul>
         <li>
           <a href="#n">Categories of Most Reviewed</a>
-          <ul>
-            <li><a href="/deals/most_reviewed">Everything</a></li>
-            <li><a href="/deals/most_reviewed_elec">Electronic</a></li>
-            <li><a href="#n">Home</a></li>
-            <li><a href="#n">Kitchen</a></li>
-            <li><a href="#n">Beauty</a></li>
-            <li><a href="#n">Travel</a></li>
+          <ul class="most_ul">
+            <li><a href="/deals/most_reviewed">All Categories</a></li>
+            <li><a href="#n">Home Gadgets</a></li>
+            <li><a href="#n">Kitchen & Household</a></li>
+            <li><a href="/deals/most_reviewed_computer">Computer Gadgets</a></li>
+            <li><a href="#n">Smartphone Gadgets</a></li>
+            <li><a href="#n">Headphones & Earbuds</a></li>
+            <li><a href="#n">Gaming Gadgets</a></li>
+            <li><a href="#n">Outdoor & Travel</a></li>
+            <!-- <li><a href="#n">Coffee Gadgets</a></li> -->
+            <!-- <li><a href="#n">Travel Gadgets</a></li> -->
+            <li><a href="#n">TV & Audio</a></li>
           </ul>
         </li>
       </ul>
