--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Most Reviewed Products on Amazon" %>
 <div class="layout"><!--layout-->
  <div class="wrap">   
   <%= render 'shared/header' %>
