--- a/app/views/deals/most_reviewed_computer.html.erb
+++ b/app/views/deals/most_reviewed_computer.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Most Reviewed Computer Gadgets on Amazon" %>
 <div class="layout"><!--layout-->
  <div class="wrap">   
   <%= render 'shared/header' %>
@@ -8,7 +9,7 @@
     <%= render 'deals/navbar_most_reviewed' %>
     <div class="filter-group guide_wrap">
       <div class="mt_info">
-        <h2>Most-Reviewed <span>Electronics</span> On Amazon</h2>
+        <h2>Most-Reviewed <span>COMPUTER GADGETS</span> On Amazon</h2>
         <p>Amazon is one of the biggest online market places in the world. And thanks to reviews and user feedback, it's also one of the most helpful since you can see what other people have purchased and loved on the site. So we put together a list of the most popular products. It's the easiest way to find the most reviewed products.</p>
       </div>
       <%= render 'deals/body_most_elec' %>
