--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Quick Search on Amazon" %>
 <div class="layout"><!--layout-->
   <div class="wrap"> 
   <%= render 'shared/header' %>
