--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Awesome Gadgets that you want to buy!!" %>
 <!-- for play youtube video-->
 <%= render 'shared/play_video' %>
 
