--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Oh,igottabuythis - Featured Products" %>
 <div class="layout"><!--layout-->
  <div class="wrap">   
   <%= render 'shared/header' %>
