--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Oh,igottabuythis - Featured Products" %>
+<% content_for :title, "Featured Products" %>  
 <div class="layout"><!--layout-->
  <div class="wrap">   
   <%= render 'shared/header' %>
