--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -364,12 +364,12 @@
 
 <div class="card clearfix" data-score="30" data-price="17.50">
   <div class="image_box">
-    <a target="_blank" href="https://amzn.to/2ZeTuYT"><img src="https://m.media-amazon.com/images/I/711r0eBpxyL._SR400,400_.jpg" alt="" /></a>
+    <a target="_blank" href="https://amzn.to/2ZeTuYT"><img src="https://m.media-amazon.com/images/I/711r0eBpxyL._SR400,400_.jpg" alt="ChasBete Wall Mounted Bottle Opener" /></a>
   </div>
   <div class="inner inner_top">
     <span class="regular"><em>30% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2ZeTuYT">prodcut_description</a></p>
+    <p><a target="_blank" href="https://amzn.to/2ZeTuYT">ChasBete Wall Mounted Bottle Opener Magnet for Fridge Skull Cast Iron with Strong Magnetic Cap Catcher Beer Bottles Opener Wall Mount</a></p>
     <div class="code_high">
       <address><span class="dis_price">$17.50</span><span class="ori_price">$25.00</span>
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
