--- a/app/views/deals/most_test.html.erb
+++ b/app/views/deals/most_test.html.erb
@@ -7,14 +7,18 @@
   <div class="promotions editors_pick common_layout most_wrapper clearfix">
     <%= render 'deals/navbar_most_reviewed' %>
     <div class="filter-group guide_wrap ">
+      <div class="mt_info">
+        <h2>Most-Reviewed Products On Amazon</h2>
+        <p>Amazon is one of the biggest online market places in the world. And thanks to reviews and user feedback, it's also one of the most helpful since you can see what other people have purchased and loved on the site. So we put together a list of the most popular products. It's the easiest way to find the most reviewed products.</p>
+      </div>
 
       <!-- <div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
         <a href="#" class="overlay-container" data-overlay-text="Title"><img src="Image_URL" alt="Img_des" class="overlay-img" /></a>
       </div> -->
     
 
-        <div class="filter-node most_box" data-filter='["10k","Bottles"]'>
-          <a href="#" class="overlay-container" data-overlay-text="Bottles"><img src="https://images.unsplash.com/photo-1527864550417-7fd91fc51a46?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Image capture goes here 03" class="overlay-img" /></a>
+        <div class="filter-node most_box" data-filter='["10k","mouse"]'>
+          <a href="#" class="overlay-container" data-overlay-text="mouse"><img src="https://images.unsplash.com/photo-1527864550417-7fd91fc51a46?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Image capture goes here 03" class="overlay-img" /><p>BOTTLES</p></a>
         </div>
 
         <div class="filter-node most_box" data-filter='["10k","PRODUCT_TITLE"]'>
@@ -33,73 +37,25 @@
           <a href="#" class="overlay-container" data-overlay-text="Ceramics"><img src="https://trungk18.github.io/img/image-grid/img-ceramics.jpg" alt="Image capture goes here 05" class="overlay-img" /></a>
         </div>
 
-      
+        <div class="filter-node most_box" data-filter='["10k","BOTTLES"]'>
+          <a href="#" class="overlay-container" data-overlay-text="Bottles"><img src="https://images.unsplash.com/photo-1527864550417-7fd91fc51a46?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Image capture goes here 03" class="overlay-img" /><p>BOTTLES</p></a>
+        </div>
 
+        <div class="filter-node most_box" data-filter='["10k","PRODUCT_TITLE"]'>
+          <a href="#" class="overlay-container" data-overlay-text="Brunch"><img src="https://trungk18.github.io/img/image-grid/img-brunch.jpg" alt="Image capture goes here 04" class="overlay-img" /></a>
+        </div>
 
-      <!-- <div class="wrapper">
-        <ul class="img-grid">
-          <li>
-            <div class="filter-node" data-filter='["10k","PRODUCT_TITLE"]'>
-              <a href="#" class="overlay-container" data-overlay-text="Beatles"><img src="https://trungk18.github.io/img/image-grid/img-beatles.jpg" alt="IAMGE_DESC" class="overlay-img"></a>
-            </div>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Bonsai">
-              <img src="https://trungk18.github.io/img/image-grid/img-bonsai.jpg" alt="Image capture goes here 02" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Bottles">
-              <img src="https://trungk18.github.io/img/image-grid/img-bottles.jpg" alt="Image capture goes here 03" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Brunch">
-              <img src="https://trungk18.github.io/img/image-grid/img-brunch.jpg" alt="Image capture goes here 04" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Ceramics">
-              <img src="https://trungk18.github.io/img/image-grid/img-ceramics.jpg" alt="Image capture goes here 05" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Hammock">
-              <img src="https://trungk18.github.io/img/image-grid/img-hammock.jpg" alt="Image capture goes here 06" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Hiking">
-              <img src="https://trungk18.github.io/img/image-grid/img-hiking.jpg" alt="Image capture goes here 07" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Orchard">
-              <img src="https://trungk18.github.io/img/image-grid/img-orchard.jpg" alt="Image capture goes here 08" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Cooking">
-              <img src="https://trungk18.github.io/img/image-grid/img-cooking.jpg" alt="Image capture goes here 09" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="School">
-              <img src="https://trungk18.github.io/img/image-grid/img-school.jpg" alt="Image capture goes here 10" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Shoes">
-              <img src="https://trungk18.github.io/img/image-grid/img-shoes.jpg" alt="Image capture goes here 11" class="overlay-img" />
-            </a>
-          </li>
-          <li>
-            <a href="#" class="overlay-container" data-overlay-text="Flight">
-              <img src="https://trungk18.github.io/img/image-grid/img-flight.jpg" alt="Image capture goes here 12" class="overlay-img" />
-            </a>
-          </li>
-        </ul>
-      </div> -->
+        <div class="filter-node most_box" data-filter='["20k","PRODUCT_TITLE"]'>
+          <a href="#" class="overlay-container" data-overlay-text="Orchard"><img src="https://trungk18.github.io/img/image-grid/img-orchard.jpg" alt="Image capture goes here 08" class="overlay-img" /></a>
+        </div>
+
+        <div class="filter-node most_box" data-filter='["20k","PRODUCT_TITLE"]'>
+          <a href="#" class="overlay-container" data-overlay-text="School"><img src="https://trungk18.github.io/img/image-grid/img-school.jpg" alt="Image capture goes here 10" class="overlay-img" /></a>
+        </div>
+
+        <div class="filter-node most_box" data-filter='["30k","PRODUCT_TITLE"]'>
+          <a href="#" class="overlay-container" data-overlay-text="Ceramics"><img src="https://trungk18.github.io/img/image-grid/img-ceramics.jpg" alt="Image capture goes here 05" class="overlay-img" /></a>
+        </div>
       
     </div><!--./filter-group-->
   </div>
