--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,188 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="40" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31QlbJ3"><img src="https://m.media-amazon.com/images/I/91prLYA5QkL._SR400,400_.jpg" alt="Cute Elephant School Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31QlbJ3">Cute Elephant School Backpack for Girls/Boys Womens Bookbag, Casual Canvas Daypack Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">40PP7T3E</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $24.99</strong> with promo code: <strong class="m_codes">40PP7T3E</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31QlbJ3">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="25" data-price="29.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33LUQxF"><img src="https://m.media-amazon.com/images/I/81nh5vX7LuL._SR400,400_.jpg" alt="S-ZONE Carry On Garment Bags" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33LUQxF">S-ZONE Carry On Garment Bags for Travel 2 in 1 Convertible Men Suit Cover Foldable Luggage Duffle Bag ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.24</span><span class="ori_price">$38.99</span></address>
+      <textarea readonly="readonly" class="code_area">25QX2CSS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $38.99</strong> with promo code: <strong class="m_codes">25QX2CSS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33LUQxF">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="17.93">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Hiq71D"><img src="https://m.media-amazon.com/images/I/61NizQc7CbL._SR400,400_.jpg" alt="POENSCAE Kitchen Utensils" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Hiq71D">POENSCAE Kitchen Utensils, Silicone Cooking Utensils Set，11-Piece with wood Handles for Non-Stick and Heat Resistant...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.93</span><span class="ori_price">$29.89</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40AF94WM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $29.89</strong> with promo code: <strong class="m_codes">40AF94WM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 11, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Hiq71D">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="13.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31TdIca"><img src="https://m.media-amazon.com/images/I/51p6lNRE5fL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31TdIca">Bluetooth Headphones, True Wireless Earbuds, Noise Cancelling Stereo Bluetooth 5.0 Headset with Dual Mic,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.60</span><span class="ori_price">$33.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+       <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">60WUZDVK</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $33.99</strong> with promo code: <strong class="m_codes">60WUZDVK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31TdIca">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="15" data-price="12.66">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z6aaGM"><img src="https://m.media-amazon.com/images/I/4101+LbrypL._SR400,400_.jpg" alt="Simply Gum" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z6aaGM">Simply Gum | Chewing Gum | Peppermint | Pack of Six (90 Pieces Total) | Vegan + non GMO </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.66</span><span class="ori_price">$14.90</span></address>
+      <textarea readonly="readonly" class="code_area">15GUMFORYOU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $14.90</strong> with promo code: <strong class="m_codes">15GUMFORYOU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 07, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Z6aaGM">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HgVoSv"><img src="https://m.media-amazon.com/images/I/61SsfTbc72L._SR400,400_.jpg" alt="MOSSY OAK Karambit Knife Set 2-piece" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HgVoSv">MOSSY OAK Karambit Knife Set 2-piece, Folding Tactical and Fixed Blade Knife with Sheath</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">50IQKP5I</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">50IQKP5I</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HgVoSv">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="41.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2zbi1DA"><img src="https://m.media-amazon.com/images/I/819H-Ckm+kL._SR400,400_.jpg" alt="zociko Food Dehydrator Machine" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2zbi1DA">zociko Food Dehydrator Machine, Food Dehydrator Dehydrated Dog Food Dryer for Jerky/Meat/Beef/Fruit/Vegetable...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$41.99</span><span class="ori_price">$59.99</span></address>
+      <textarea readonly="readonly" class="code_area">302923LF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $59.99</strong> with promo code: <strong class="m_codes">302923LF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2zbi1DA">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="25.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HgWMEH"><img src="https://m.media-amazon.com/images/I/71I0wR-S8PL._SR400,400_.jpg" alt="[The Best Deal]Water Flosser Cordless Dental Water" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HgWMEH">[The Best Deal]Water Flosser Cordless Dental Water Pick for Teeth Cleaning Rechargeable with 4 Jet Tips,200ml Reservoir...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.89</span><span class="ori_price">$36.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">307N88QK</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $36.99</strong> with promo code: <strong class="m_codes">307N88QK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HgWMEH">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="8.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31Weu8B"><img src="https://m.media-amazon.com/images/I/61-HVeFaeVL._SR400,400_.jpg" alt="Photo Light Box For Jewellery and Small Items" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31Weu8B">Photo Light Box For Jewellery and Small Items ( Size 9 x 9 x9.5"/ 22 x 22 x24cm ) with Two Backdrops Included by Cofunia Brand</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.39</span><span class="ori_price">$13.98</span></address>
+      <textarea readonly="readonly" class="code_area">40LB3AC2</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $13.98</strong> with promo code: <strong class="m_codes">40LB3AC2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31Weu8B">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="20.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Njzgec"><img src="https://m.media-amazon.com/images/I/51BWT41LkBL._SR400,400_.jpg" alt="LINGANZH Smart Plug" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Njzgec">LINGANZH Smart Plug, WiFi Socket Mini Outlet Compatible with Alexa,Echo,Google Home IFTTT, No Hub Required,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.29</span><span class="ori_price">$36.89</span></address>
+      <textarea readonly="readonly" class="code_area">458OPV3C</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $36.89</strong> with promo code: <strong class="m_codes">458OPV3C</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Njzgec">Use Code at Amazon</a></div>
+</div>
+  
 <div class="card clearfix" data-score="40" data-price="17.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2KJaF0J"><img src="https://m.media-amazon.com/images/I/61bbxxy+R9L._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
