--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -186,8 +186,11 @@
 /* Begin Gift Guide Main Page */
 .guide_wrap{margin:50px 0 0 0;font-family: 'Montserrat', sans-serif;} 
 .guide_wrap .mt_info{margin:-40px 0 40px 0;padding:0 10px;color:#000;}
+.guide_wrap .mt_info h2{display:inline-block;}
 .guide_wrap .mt_info h2 span{color:#08f;}
 .guide_wrap .mt_info p{font-size:13px;}
+.guide_wrap .mt_info em{display:inline-block;float:right;}
+.guide_wrap .mt_info em a{text-decoration:none;color:#000;}
 .guide_wrap .guide_box{float:left;width:31.33%;margin:0 1% 70px 1%;}
 .guide_wrap .guide_box .image{height:250px;}
 .guide_wrap .guide_box .image img{width:100%;height:100%;}
