--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,187 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="40" data-price="23.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31NFjLY"><img src="https://m.media-amazon.com/images/I/61l7mvKbFsL._SR400,400_.jpg" alt="Secura Stainless Steel French Press Coffee Maker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31NFjLY">Secura Stainless Steel French Press Coffee Maker -Extra Filters Included- 34 fl. oz (1 Liter),Black Matte</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.39</span><span class="ori_price">$38.98</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40SMGCVI</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $38.98</strong> with promo code: <strong class="m_codes">40SMGCVI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31NFjLY">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="21.07">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZcQE6E"><img src="https://m.media-amazon.com/images/I/61fO2DGyeOL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZcQE6E">Wireless Earbuds, 5.0 True Wireless Bluetooth Headphones 3D Stereo Sound Wireless Headphones Mini Sweatproof Sport Headsets...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.07</span><span class="ori_price">$42.99</span></address>
+      <textarea readonly="readonly" class="code_area">51H5IIM6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>51% off at $42.99</strong> with promo code: <strong class="m_codes">51H5IIM6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZcQE6E">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31XCisL"><img src="https://images-na.ssl-images-amazon.com/images/I/71l6fhWorKL._SX425_.jpg" alt="PETLESO Heated Dog Water Bowl" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31XCisL">PETLESO Heated Dog Water Bowl - Outdoor Dog Water Bowl for Small to Large Dogs</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">40A3V22F</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $29.99</strong> with promo code: <strong class="m_codes">40A3V22F</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31XCisL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KP665b"><img src="https://m.media-amazon.com/images/I/41DPSQBfnyL._SR400,400_.jpg" alt="Smart plug" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KP665b">Smart plug, MXQ Mini Wifi Smart Outlet Socket Work with Alexa Google Assistant IFTTT, No Hub Required, Remote Control...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">50IYIJAE</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $24.99</strong> with promo code: <strong class="m_codes">50IYIJAE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KP665b">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="12.32">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KL3QeR"><img src="https://m.media-amazon.com/images/I/71kOi-uUJwL._SR400,400_.jpg" alt="Sandals Open Toe Slingback Flat Summer Shoes" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KL3QeR">Nailyhome Womens Strappy Lace Up Sandals Open Toe Slingback Flat Summer Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.32</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">56NJDFQN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>56% off at $27.99</strong> with promo code: <strong class="m_codes">56NJDFQN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KL3QeR">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="7.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Zmq2nQ"><img src="https://m.media-amazon.com/images/I/71xtStmwcvL._SR400,400_.jpg" alt="Adult Lunch Box Insulated Lunch Bag" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Zmq2nQ">Adult Lunch Box Insulated Lunch Bag Large Cooler Tote Bag for Men, Women, Lunch Tote Cooler for Office/Picnic </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.79</span><span class="ori_price">$12.99</span></address>
+      <textarea readonly="readonly" class="code_area">405B1C5E</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $12.99</strong> with promo code: <strong class="m_codes">405B1C5E</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 21, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Zmq2nQ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="24.04">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KO3GDP"><img src="https://m.media-amazon.com/images/I/71ly4PgjqzL._SR400,400_.jpg" alt="CREATIVE DESIGN 46 LED Solar Lights" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KO3GDP">CREATIVE DESIGN 46 LED Solar Lights Outdoor with Mounting Pole, 4 Modes Solar Gutter Light Motion Sensor Light Wall Light for Patio,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.04</span><span class="ori_price">$36.99</span></address>
+      <textarea readonly="readonly" class="code_area">35O8BMNU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $36.99</strong> with promo code: <strong class="m_codes">35O8BMNU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 26, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KO3GDP">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="48.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KKUS1p"><img src="https://m.media-amazon.com/images/I/61qHLcP+n+L._SR400,400_.jpg" alt="Portable Induction Cooktop Countertop Burner" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KKUS1p">Portable Induction Cooktop Countertop Burner, CUSINAID 1800W Sensor Touch Electric Induction Cooker Suitable...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$48.99</span><span class="ori_price">$69.99</span></address>
+      <textarea readonly="readonly" class="code_area">304GYOZB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $69.99</strong> with promo code: <strong class="m_codes">304GYOZB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KKUS1p">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="10.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31PEu5e"><img src="https://m.media-amazon.com/images/I/41fyACEa-gL._SR400,400_.jpg" alt="GiNT Stainless Steel Coffee Thermos" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31PEu5e">GiNT Stainless Steel Coffee Thermos Bottle with Top Lid, Double Wall Insulated, Leak Proof Travel Mug, Dark Blue, 17oz / 500ML</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.39</span><span class="ori_price">$15.98</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">35S5I6F3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $15.98</strong> with promo code: <strong class="m_codes">35S5I6F3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31PEu5e">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="20.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33S4qiv"><img src="https://m.media-amazon.com/images/I/4133Co0YZKL._SR400,400_.jpg" alt="GiNT Stainless Steel Thermal Coffee Carafe" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33S4qiv">GiNT Stainless Steel Thermal Coffee Carafe with Lid/Double Walled Vacuum Thermos / 12 Hour Heat Retention,1.5L, White …</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.29</span><span class="ori_price">$28.98</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30ZLO1D9</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $28.98</strong> with promo code: <strong class="m_codes">30ZLO1D9</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 01, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33S4qiv">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="50" data-price="5.50">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Zj2Rqu"><img src="https://m.media-amazon.com/images/I/713g7XKFWiL._SR400,400_.jpg" alt="NEWYES 8.5 Inches LCD Writing Tablet" /></a>
